src/objects/QPMS__Registration__c.object
<CustomObject>
    <description>This object stores Registration information.</description>
    <fields>
        <fullName>QPMS__Business_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Maintenance Provider</inlineHelpText>
        <label>Maintenance Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (Maintenance Provider)</relationshipLabel>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Date__c</fullName>
        <label>Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Serial_Number__c</fullName>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Service Provider</inlineHelpText>
        <label>Service Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Service A</fullName>
                </value>
                <value>
                    <fullName>Service B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Unique_Device_Identifier__c</fullName>
        <label>Unique Device Identifier(UDI)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer Detail</label>
        <referenceTo>QPMS__User_Detail__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REG-{00000}</displayFormat>
        <label>Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>